--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <button id="connect-wallet">Connect Wallet</button>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/web3@1.0.0-beta.34/dist/web3.min.js"></script>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
