--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="usdBalance">Balance in USD: Loading...</p>
   </div>
   
-  <!-- Подключение скрипта -->
+  <!-- Подключение скрипта внизу страницы -->
   <script src="script.js"></script>
 </body>
 </html>
