--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USDT Token Balance</title>
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div id="container">
         <h1>USDT Token Balance</h1>
         <button id="connectButton">Connect Wallet</button>
-        <p id="walletAddress">Wallet Address: </p>
+        <p id="walletAddress"></p>
+        <img id="tokenImage" src="" alt="Token Image" width="100" height="100"/>
         <p id="balance">Balance: Loading...</p>
         <p id="balanceUSD">Balance in USD: Loading...</p>
-        <img id="tokenImage" src="" alt="Token Image" style="width: 100px;">
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
