--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USDT Token Balance</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.1/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>USDT Token Balance</h1>
-        <button id="connectWallet">Connect Wallet</button>
-        <div id="walletAddress">Wallet Address: Not connected</div>
-        <div id="balance">Balance: Loading...</div>
-        <div id="usdBalance">Balance in USD: Loading...</div>
+        <button id="connectButton">Connect Wallet</button>
+
+        <p id="walletAddress">Wallet Address: Not connected</p>
+        <p id="balance">Balance: Loading...</p>
+        <p id="usdBalance">Balance in USD: Loading...</p>
     </div>
 
     <script src="script.js"></script>
